New macros. Revised the ps H non-interop cases to use the macros.

--- a/macros.tex
+++ b/macros.tex
@@ -188,6 +188,7 @@
 \newcommand{\first}[1]{\ensuremath{#1}}
 \newcommand{\second}[1]{\ensuremath{#1'}}
 \newcommand{\third}[1]{\ensuremath{#1''}}
+\newcommand{\fourth}[1]{\ensuremath{#1'''}}
 \newcommand{\ith}[1]{\formindex{#1}{i}}
 
 % Miscellaneous
@@ -203,5 +204,9 @@
 \newcommand{\procan}{canonical forms lemma\xspace}
 \newcommand{\profv}{forced value\xspace}
 \newcommand{\profvs}{\profv{}s\xspace}
+
+% Errors
+
+\newcommand{\errempty}{\str{Empty \; list}\xspace}
 
 %\newcommand{\}{}
