Added the lump equality relation figure to the model. Moved the unbrand and equality figures to the end of the model.

--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -94,10 +94,6 @@ If it is a Scheme value wrapped in an inner boundary, the outer boundary reduces
 
 \clearpage
 
-\input{model/unbrand.tex}
-
-\clearpage
-
 \input{model/haskell/grammar.tex}
 
 \clearpage
@@ -155,3 +151,9 @@ If it is a Scheme value wrapped in an inner boundary, the outer boundary reduces
 \clearpage
 
 \input{model/scheme/operational-semantics/ml.tex}
+
+\clearpage
+
+\input{model/unbrand.tex}
+
+\input{model/equality.tex}
