--- a/macros.tex
+++ b/macros.tex
@@ -8,6 +8,7 @@
 \newcommand{\symcs}{k}
 \newcommand{\symcsvar}{u}
 \newcommand{\symenv}{\Gamma}
+\newcommand{\symlumpeq}{\doteq}
 \newcommand{\symexp}{e}
 \newcommand{\symext}{,}
 \newcommand{\symhasty}{:}
@@ -196,6 +197,7 @@
 \newcommand{\str}[1]{\ensuremath{\formstr{``#1"}}}
 \newcommand{\subst}[3]{\ensuremath{#1[#2/#3]}}
 \newcommand{\synlist}[1]{\ensuremath{\lbrace #1 \rbrace}}
+\newcommand{\eq}{\ensuremath{\symlumpeq}\xspace}
 
 % Proof
 
