Made corrections according to my hard copy notes. Fixed the HM/MH type equality problem for lumps for polymorphic types. I think.

--- a/model/haskell/operational-semantics/ml.tex
+++ b/model/haskell/operational-semantics/ml.tex
@@ -49,6 +49,6 @@ $(\first{\vartyh} \neq \second{\vartyh})$ \\
 {\exptabs{\tyvarh}{\exphm{\vartyh}{\tysubst{\vartym}{\tylump}{\tyvarm}}{\expsubst{\varexpm}{\tylump}{\second{\tyvarm}}}}} \\
 
 \end{tabular}
-\caption{Haskell-ML operational semantity}
+\caption{Haskell-ML operational semantics}
 \label{hmos}
 \end{figure}
