--- a/model/ml/operational-semantics/haskell.tex
+++ b/model/ml/operational-semantics/haskell.tex
@@ -49,6 +49,6 @@ $(\first{\vartym} \neq \second{\vartym})$ \\
 {\exptabs{\tyvarm}{\expmh{\vartym}{\tysubst{\vartyh}{\tylump}{\tyvarh}}{\expsubst{\varexph}{\tylump}{\second{\tyvarh}}}}} \\
 
 \end{tabular}
-\caption{ML-Haskell operational semantity}
+\caption{ML-Haskell operational semantics}
 \label{mhos}
 \end{figure}
