HM/MH L interop corrections.

--- a/macros.tex
+++ b/macros.tex
@@ -210,5 +210,6 @@
 % Errors
 
 \newcommand{\errempty}{\str{Empty \; list}\xspace}
+\newcommand{\errtypematch}{\str{Type \; mismatch}\xspace}
 
 %\newcommand{\}{}
