--- a/model/haskell/operational-semantics/ml.tex
+++ b/model/haskell/operational-semantics/ml.tex
@@ -7,14 +7,14 @@
 \redruleh
 {\exphm{\first{\vartyh}}{\tylump}{(\expmh{\tylump}{\second{\vartyh}}{\varexph})}}
 {\varexph}
-$(\first{\vartyh} = \second{\vartyh})$ \\
+$(\first{\vartyh} = \second{\vartyh}$ and $\first{\vartyh} \neq \tylump)$ \\
 
 % hm t L (mh L t e)
 
 \redruleh
 {\exphm{\first{\vartyh}}{\tylump}{(\expmh{\tylump}{\second{\vartyh}}{\varexph})}}
 {\expwrongs{\vartyh}{\str{Type \; mismatch}}}
-$(\first{\vartyh} \neq \second{\vartyh})$ \\
+$(\first{\vartyh} \neq \second{\vartyh}$ and $\first{\vartyh} \neq \tylump)$ \\
 
 % hm N N n
 
