--- a/model/ml/operational-semantics/haskell.tex
+++ b/model/ml/operational-semantics/haskell.tex
@@ -5,16 +5,16 @@
 % mh t L (hm L t e)
 
 \redrulem
-{\expmh{\first{\vartym}}{\tylump}{(\exphm{\tylump}{\second{\vartym}}{\varexpm})}}
-{\varexpm}
-$(\first{\vartym} = \second{\vartym})$ \\
+{\expmh{\first{\vartym}}{\tylump}{(\exphm{\tylump}{\second{\vartym}}{\varvalfm})}}
+{\varvalfm}
+$(\first{\vartym} = \second{\vartym}$ and $\first{\vartym} \neq \tylump)$ \\
 
 % mh t L (hm L t e)
 
 \redrulem
-{\expmh{\first{\vartym}}{\tylump}{(\exphm{\tylump}{\second{\vartym}}{\varexpm})}}
-{\expwrongs{\vartym}{\str{Type \; mismatch}}}
-$(\first{\vartym} \neq \second{\vartym})$ \\
+{\expmh{\first{\vartym}}{\tylump}{(\exphm{\tylump}{\second{\vartym}}{\varvalfm})}}
+{\expwrongs{\vartym}{\errtypematch}}
+$(\first{\vartym} \neq \second{\vartym}$ and $\first{\vartym} \neq \tylump)$ \\
 
 % mh N N n
 
