--- a/proof/theorems/progress/haskell-ml.tex
+++ b/proof/theorems/progress/haskell-ml.tex
@@ -353,7 +353,13 @@ Cannot occur because \varexph is closed.
 
 \end{subcase}
 
-\begin{subcase}{\first{\vartym} $=$ \tylump}
+\begin{subcase}{\first{\vartyh} $\neq$ \tylump and \first{\vartym} $=$ \tylump}
+
+\psvalset
+{\first{\varexpm}}
+{\tylump}
+{\expmh{\tylump}{\second{\vartyh}}{\varexph}, \expms{\cslump}{\varexps}}
+
 
 \first{\varexpm} = \expmh{\tylump}{\second{\vartyh}}{\varexph}
 hm t t (ms k v) is a forced value
