Added error string macros. Minor wording change to the lump equality relation.

--- a/macros.tex
+++ b/macros.tex
@@ -209,7 +209,11 @@
 
 % Errors
 
+\newcommand{\errnum}{\str{Not \; a \; number}\xspace}
+\newcommand{\errlist}{\str{Not \; a \; list}\xspace}
+\newcommand{\errfun}{\str{Not \; a \; function}\xspace}
 \newcommand{\errempty}{\str{Empty \; list}\xspace}
-\newcommand{\errtypematch}{\str{Type \; mismatch}\xspace}
+\newcommand{\errtype}{\str{Type \; mismatch}\xspace}
+\newcommand{\errbrand}{\str{Brand \; mismatch}\xspace}
 
 %\newcommand{\}{}
