--- a/model/equality.tex
+++ b/model/equality.tex
@@ -5,7 +5,7 @@ $x \eq x$
 
 $x \eq y \Rightarrow y \eq x$
 
-$x \eq y \wedge y \eq z \Rightarrow x \eq z$
+$x \eq y$ and $y \eq z \Rightarrow x \eq z$
 
 $\vartyh \eq \tylump$
 
