--- a/model/ml/operational-semantics/haskell.tex
+++ b/model/ml/operational-semantics/haskell.tex
@@ -13,7 +13,7 @@ $(\first{\vartym} = \second{\vartym}$ and $\first{\vartym} \neq \tylump)$ \\
 
 \redrulem
 {\expmh{\first{\vartym}}{\tylump}{(\exphm{\tylump}{\second{\vartym}}{\varvalfm})}}
-{\expwrongs{\vartym}{\errtypematch}}
+{\expwrongs{\vartym}{\errtype}}
 $(\first{\vartym} \neq \second{\vartym}$ and $\first{\vartym} \neq \tylump)$ \\
 
 % mh N N n
